--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cors": "~2.2.0",
     "mongoose": "~3.8.8",
     "lodash": "~2.4.1",
-    "MD5": "~1.2.1"
+    "MD5": "~1.2.1",
+    "async": "~0.9.0"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
