--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "karma-jasmine": "~0.1.5",
     "karma-chrome-launcher": "~0.1.3",
     "grunt-nodemon": "~0.2.1",
-    "grunt-concurrent": "~0.5.0"
+    "grunt-concurrent": "~0.5.0",
+    "grunt-node-inspector": "~0.1.5"
   },
   "license": "MIT"
 }
