--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "karma-chrome-launcher": "~0.1.3",
     "grunt-nodemon": "~0.2.1",
     "grunt-concurrent": "~0.5.0",
-    "grunt-node-inspector": "~0.1.5"
+    "grunt-node-inspector": "~0.1.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "jshint-stylish": "~1.0.0"
   },
   "license": "MIT"
 }
