--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "grunt-concurrent": "~0.5.0",
     "grunt-node-inspector": "~0.1.5",
     "grunt-contrib-jshint": "~0.10.0",
-    "jshint-stylish": "~1.0.0"
+    "jshint-stylish": "~1.0.0",
+    "grunt-contrib-csslint": "~0.3.1"
   },
   "license": "MIT"
 }
