--- a/package.json
+++ b/package.json
@@ -43,12 +43,7 @@
     "grunt-node-inspector": "~0.1.5",
     "grunt-contrib-jshint": "~0.10.0",
     "jshint-stylish": "~1.0.0",
-    "grunt-contrib-csslint": "~0.3.1",
-
-    "gulp": "~3.8.10",
-    "require-dir": "~0.1.0",
-    "gulp-coffeelint": "~0.4.0",
-    "gulp-csslint": "~0.1.5"
+    "grunt-contrib-csslint": "~0.3.1"
   },
   "license": "MIT"
 }
