--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "modernizr": "2.6.2",
     "moment": "2.2.1",
     "bootstrap": "3.0.0",
-    "js-md5": "1.0.1"
+    "js-md5": "1.0.1",
+    "highlightjs": "8.4.0"
   }
 }
