--- a/package.json
+++ b/package.json
@@ -35,10 +35,7 @@
     "grunt-inline-angular-templates": "~0.1.5",
     "grunt-nodemon": "~0.2.1",
     "grunt-concurrent": "~0.5.0",
-    "grunt-node-inspector": "~0.1.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "jshint-stylish": "~1.0.0",
-    "grunt-contrib-csslint": "~0.3.1"
+    "grunt-node-inspector": "~0.1.5"
   },
   "license": "MIT"
 }
