--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "modernizr": "2.6.2",
     "bootstrap": "3.0.0",
     "js-md5": "1.0.1",
-    "highlightjs": "8.4.0"
+    "highlightjs": "8.4.0",
+    "jquery": "~2.1.4"
   }
 }
